@@ -14,19 +14,24 @@
 
 //tells the parser where a level's objects begin and end
 #:0:0
-fuse:100:400:1:1:1
+fuse:100:400:false:1:1
 platform:50:125:2000:25:0
 platform:-400:300:500:25:0
 platform:-700:125:400:25:0
+playerspawner:300:-100:0:0:9
+ballspawner:250:-100:0:0:1
 wire:0:0:0:0:0
 pad:100:100:true:-1:1
 gate:-400:100:true:-1:1
 wire:0:0:0:0:0
-player:400:10:1:0:9
+player:400:10:1:0:8
 #:0:0
 
 #:0:1
-player:100:100:1:0
+player:100:100:1:0:8
+playerspawner:300:-100:0:0:9
+ballspawner:250:-100:0:0:1
+platform:-100:300:450:25:0
 #:0:1
 
 #:0:2
