@@ -2,11 +2,11 @@ intro:true
 world:0:true
 level:0:0:true
 level:0:1:true
-level:0:2:true
-level:0:3:true
-level:0:4:true
-level:0:5:true
-level:0:6:true
-level:0:7:true
-level:0:8:true
-level:0:9:true
+level:0:2:false
+level:0:3:false
+level:0:4:false
+level:0:5:false
+level:0:6:false
+level:0:7:false
+level:0:8:false
+level:0:9:false
