@@ -6,21 +6,24 @@ import org.newdawn.slick.geom.Shape;
 import org.newdawn.slick.geom.Transform;
 import org.newdawn.slick.geom.Vector2f;
 
+import com.bipolar.Bipolar;
 import com.bipolar.controller.EntityController;
+import com.bipolar.model.LevelController;
 import com.bipolar.resourceloader.ResourceLoader;
 import com.bipolar.states.Level;
 import com.bipolar.view.Camera;
 
 public class Ball extends Entity{
 	private static final float INIT_VEL = .5f;
-	private int state = -1; //neutral
+	private int state = 1; //neutral
 	private Vector2f velocity, acceleration;
 	private Rectangle futureBox;
-	
+	private boolean respawned = true;
+
 	public Ball(int xpos, int ypos, Vector2f initDirection) {
 		super(xpos, ypos);
 		this.image = ResourceLoader.getImage("ball");
-		this.drawLayer = EntityController.player.getDrawLayer();
+		this.drawLayer = 8;
 		this.width = this.image.getWidth();
 		this.height = this.image.getHeight();
 		this.setGeom(xpos, ypos, this.width, this.height);
@@ -29,13 +32,21 @@ public class Ball extends Entity{
 		this.acceleration = new Vector2f();
 		EntityController.addBall(this);
 	}
-	
+
 	public void update(){
 		move();
 		this.hitbox.setLocation(this.position.x, this.position.y);
+
+		if (this.position.x > Bipolar.MAXWIDTH
+				|| this.position.x < -Bipolar.MAXWIDTH
+				|| this.position.y > Bipolar.MAXHEIGHT
+				|| this.position.y < -Bipolar.MAXHEIGHT) {
+			EntityController.ballSpawner.spawnBall();
+			this.hitbox.setLocation(this.position.x, this.position.y);
+		}
 	}
-	
-	
+
+
 	public void render(Camera c) {
 		transform(c);
 		new Transform();
@@ -46,14 +57,14 @@ public class Ball extends Entity{
 		Level.drawObj.draw(this.futureBox.transform(drawTf));
 		this.image.draw(this.transformedPosition.x, this.transformedPosition.y);
 	}
-	
-	
+
+
 	public void move() {
 		this.futureBox.setLocation(this.position.x + (this.velocity.x), this.position.y + (this.velocity.y));
 		fixVelocity(isBlocked(this.futureBox));
 		updatePhysics();
 	}
-	
+
 	public void fixVelocity(Rectangle collideBox) {
 		if(collideBox == null) {
 			return;
@@ -68,17 +79,17 @@ public class Ball extends Entity{
 			Vector2f myCorner = getQuadrantCorner(this.hitbox, velQuad);
 			int oppositeQuad;
 			switch(velQuad) {
-				case 1:
-					oppositeQuad = 3;
-					break;
-				case 2:
-					oppositeQuad = 4;
-					break;
-				case 3:
-					oppositeQuad = 1;
-					break;
-				default:
-					oppositeQuad = 2;
+			case 1:
+				oppositeQuad = 3;
+				break;
+			case 2:
+				oppositeQuad = 4;
+				break;
+			case 3:
+				oppositeQuad = 1;
+				break;
+			default:
+				oppositeQuad = 2;
 			}
 			Vector2f itsCorner = getQuadrantCorner(collideBox, oppositeQuad);
 			Vector2f myCornerToItsCorner = itsCorner.sub(myCorner);
@@ -91,7 +102,7 @@ public class Ball extends Entity{
 			this.velocity.x *= -.9;
 		}
 	}
-	
+
 	public int quadrant(Vector2f vector) {
 		if(vector.x < 0) {
 			if(vector.y < 0) {
@@ -104,20 +115,20 @@ public class Ball extends Entity{
 		}
 		return 1;
 	}
-	
+
 	public Vector2f getQuadrantCorner(Rectangle rect, int quadrant) {
 		switch(quadrant) {
-			case 1:
-				return new Vector2f(rect.getMaxX(), rect.getMaxY());
-			case 2:
-				return new Vector2f(rect.getMinX(), rect.getMaxY());
-			case 3:
-				return new Vector2f(rect.getMinX(), rect.getMinY());
-			default:
-				return new Vector2f(rect.getMaxX(), rect.getMinY());
+		case 1:
+			return new Vector2f(rect.getMaxX(), rect.getMaxY());
+		case 2:
+			return new Vector2f(rect.getMinX(), rect.getMaxY());
+		case 3:
+			return new Vector2f(rect.getMinX(), rect.getMinY());
+		default:
+			return new Vector2f(rect.getMaxX(), rect.getMinY());
 		}
 	}
-	
+
 	public Rectangle isBlocked(Shape tf){
 		for (Entity e : EntityController.getLevelObjects()) {
 			if (e instanceof Platform) {
@@ -130,17 +141,35 @@ public class Ball extends Entity{
 				if (tf.intersects(e.hitbox)) {
 					return e.hitbox;
 				}
+			} else if (e instanceof Fuse) {
+				if (tf.intersects(e.hitbox)) {
+					System.out.println(this.state + " e:" + e.getState());
+					if (e.getState() == this.state) {
+						LevelController.setCompleted(true);
+					}
+				}
 			}
 		}
 		return null;
 	}
 
-	
+	public Vector2f getVelocity() {
+		return this.velocity;
+	}
+
+	public boolean getRespawned() {
+		return this.respawned;
+	}
+
+	public void setRespawned(boolean set) {
+		this.respawned = set;
+	}
+
 	public void updatePhysics(){
 		this.position.x += this.velocity.x;
 		this.position.y += this.velocity.y;
 	}
-	
+
 	public void setGeom(int x, int y, int width, int height) {
 		hitbox = new Rectangle(x, y, width, height);
 	}
