@@ -57,6 +57,14 @@ public class Level extends BasicGameState {
 	@Override
 	public void update(GameContainer container, StateBasedGame game, int delta)
 			throws SlickException {
+		if (LevelController.getCompleted()) {
+			if (this.levelID + 1 < Bipolar.LEVELPERWORLD) {
+				Bipolar.level.get(this.worldID)[this.levelID + 1] = true;
+			} else if (this.worldID + 1 < Bipolar.NUMWORLDS){
+				Bipolar.world[this.worldID + 1] = true;
+			}
+		}
+		
 		if (in.isKeyPressed(Input.KEY_ESCAPE) || LevelController.getCompleted()) {
 			game.enterState(Bipolar.SUBWORLDSTATE);
 			LevelController.setCompleted(false);
@@ -64,14 +72,6 @@ public class Level extends BasicGameState {
 		}
 		container.setMinimumLogicUpdateInterval(2 * Bipolar.slowdown);
 		LevelController.updateLevel(delta);
-		
-		if (in.isKeyPressed(Input.KEY_ENTER)) {
-			if (this.levelID + 1 < Bipolar.LEVELPERWORLD) {
-				Bipolar.level.get(this.worldID)[this.levelID + 1] = true;
-			} else if (this.worldID + 1 < Bipolar.NUMWORLDS){
-				Bipolar.world[this.worldID + 1] = true;
-			}
-		}
 	}
 
 	@Override
